fixed book title wrapping issue in books page

--- a/public/stylesheets/books.css
+++ b/public/stylesheets/books.css
@@ -72,10 +72,9 @@ select {
     line-height: 1.5;
     font-family: Copernicus, "Libre Baskerville", Georgia, serif;
     font-weight: 600;
-    text-overflow: ellipsis;
 }
 
-.book-author {
+.book-title, .book-author {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
